// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR with a description with >1 tag 1`] = `
"
  /**
   * This is a thing
* @default myDefaultValue
* @deprecated Use the other field instead
   */"
`;

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR with a description with 1 tag 1`] = `
"
  /**
   * This is a thing
* @default myDefaultValue
   */"
`;

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR with a description without tags 1`] = `
"
  /**
   * This is a thing
   */"
`;

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR without a description with >1 tag 1`] = `
"
  /**
   * @default myDefaultValue
* @deprecated Use the other field instead
   */"
`;

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR without a description with 1 tag 1`] = `
"
  /**
   * @default myDefaultValue
   */"
`;

exports[`language-typescript DEFAULT_DOCUMENTATION_GENERATOR without a description without tags 1`] = `""`;

exports[`language-typescript DEFAULT_ENUM_FORMATTER w/ deprecated value 1`] = `
"{
  
  /**
   * value A
* @deprecated Bad
   */
a = 'a',

  /**
   * @deprecated Bad
   */
b = 'b',

  /**
   * value C
   */
c = 'c',
d = 'd',
e = 'e'
}"
`;

exports[`language-typescript DEFAULT_ENUM_FORMATTER w/ description 1`] = `
"{
  
  /**
   * value A
   */
a = 'a',
b = 'b'
}"
`;

exports[`language-typescript DEFAULT_ENUM_FORMATTER w/o description 1`] = `
"{
  a = 'a',
b = 'b'
}"
`;

exports[`language-typescript DEFAULT_ENUM_TYPE_BUILDER formats properly 1`] = `
"enum Test {
  a = 'a',
b = 'b'
}"
`;

exports[`language-typescript DEFAULT_FORMAT_INPUT non optional 1`] = `"test: test2;"`;

exports[`language-typescript DEFAULT_FORMAT_INPUT optional 1`] = `"test?: test2;"`;

exports[`language-typescript DEFAULT_NAME_QUERY anonymous 1`] = `"Anonymous"`;

exports[`language-typescript DEFAULT_NAME_QUERY with name 1`] = `"Test"`;

exports[`language-typescript DEFAULT_TYPE_PRINTER non null 1`] = `"test | null"`;

exports[`language-typescript DEFAULT_TYPE_PRINTER null 1`] = `"test"`;

exports[`language-typescript interfaceExtendListToString with empty array 1`] = `""`;

exports[`language-typescript interfaceExtendListToString with non-empty array 1`] = `" extends test, test2, test3"`;
